# BankManagementSystem_CPP

./: CMakeLists.txt  DatabaseConnectionManager.cpp  DatabaseConnectionManager.h  LoginManager.cpp  LoginManager.h  main.cpp
Customer_Files/: CustomerAccount.cpp  CustomerAccount.h  CustomerOperations.cpp  CustomerOperations.h
Employee_Files/: EmployeeAccount.cpp  EmployeeAccount.h  EmployeeOperations.cpp  EmployeeOperations.h
Logging/: Logger.cpp  Logger.h
